--- a/css/style.css
+++ b/css/style.css
@@ -10174,6 +10174,20 @@ table.special thead td {
   font-family: Verdana;
 }
 
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 table.plain thead td:first-child,
 table.special thead td:first-child {
   border-left: 1px solid #dcdddd;
