--- a/css/style.css
+++ b/css/style.css
@@ -1652,6 +1652,27 @@ pre code {
   background-color: #b1dfbb;
 }
 
+.contendedor-responsive {
+	position: relative
+	overflow: hidden;
+	padding-top: 56.25%;
+}
+	
+iframe-responsivo {
+position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+		height: 100%;
+	border: 0;
+
+}
+
+
+
+
+
+
 .table-info,
 .table-info > th,
 .table-info > td {
