--- a/css/style.css
+++ b/css/style.css
@@ -1652,7 +1652,7 @@ pre code {
   background-color: #b1dfbb;
 }
 
-.container {
+.contenedor {
 	position: relative;
 	padding-bootom: 56.25%;
 	height: 0;
@@ -1660,7 +1660,7 @@ pre code {
 
 }
 	
-.container-iframe {
+.contenedor-iframe {
 position: absolute;
 	top: 0;
 	left: 0;
@@ -1669,9 +1669,6 @@ position: absolute;
 	border: 0;
 
 }
-
-
-
 
 
 
