--- a/css/style.css
+++ b/css/style.css
@@ -1658,7 +1658,7 @@ pre code {
     overflow: hidden;
     padding-top: 56.25%;
 }
-.iframe-responsivo {
+.iframe {
     position: absolute;
     top: 0;
     left: 0;
