--- a/css/style.css
+++ b/css/style.css
@@ -1653,19 +1653,20 @@ pre code {
 }
 
 
-.contenedor {
-    position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
-}
-.contenedor-iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
-}
+.responsive{ 
+		width: 100%;
+			height: 0;
+			padding-bottom: 56.25%;
+			position: relative;
+			
+		}
+		
+.responsive iframe{
+	position: absolute;
+		width: 100%;
+		height: 100%;
+			
+		}
 
 
 .table-info,
