--- a/css/style.css
+++ b/css/style.css
@@ -1662,7 +1662,7 @@ pre code {
 			
 		}
 		
-		.responsive iframe{
+		.responsive-iframe{
 		position: absolute;
 			width: 100%;
 			height: 100%;
