--- a/css/style.css
+++ b/css/style.css
@@ -1658,7 +1658,7 @@ pre code {
 		width: 100%;
 			height: 0;
 			padding-bottom: 56.25%;
-			position: center;
+			position:absolute;
 			
 		}
 		
