--- a/css/style.css
+++ b/css/style.css
@@ -1652,7 +1652,13 @@ pre code {
   background-color: #b1dfbb;
 }
 
-
+.responsive{
+	position: relative;
+	padding-bottom: 56.25%;
+	height: 0;
+    overflow: hidden;
+	
+}
 
 
 .table-info,
