--- a/css/style.css
+++ b/css/style.css
@@ -1660,6 +1660,19 @@ pre code {
 	
 }
 
+.iframe {
+
+    position: absolute;
+
+    top:0;
+
+    left: 0;
+
+    width: 100%;
+
+    height: 100%;
+}
+
 
 .table-info,
 .table-info > th,
