--- a/css/style.css
+++ b/css/style.css
@@ -1654,7 +1654,7 @@ pre code {
 
 .responsive{
 	position: relative;
-	padding-bottom: 56.25%;
+	padding-top: 56.25%;
 	height: 0;
     overflow: hidden;
 	
